# tmignore-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  release-plz.toml  tmignore-rs.rb  tmignore-rs.rb.template
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  coverage.yml  homebrew.yml  nix-flake.yml  publish.yml  release-plz.yml
docs/: Investigation.md  Notes.md  Tests.md
scripts/: codesign-for-instruments.sh
src/: cache.rs  config.rs  diff.rs  find_repositories.rs  git.rs  json.rs  legacy_cache.rs  legacy_config.rs  main.rs  text.rs  timemachine.rs
src/cache/: legacy_cache.rs  mod.rs
src/commands/: list.rs  mod.rs  monitor.rs  monitor_v3.rs  path.rs  reset.rs  run.rs  stats.rs
src/sql/: schema.sql  v0.sql  v1.sql
src/tests/: bad.plist  test.plist
