[package]
name = "tmignore-rs"
description = "Makes Time Machine respect .gitignore files"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6", features = ["derive"] }
core-foundation = "0.10.1"
crossbeam-channel = "0.5.15"
fern = "0.7.1"
fnmatch-regex = "0.3.0"
ignore = { version = "0.4", features = ["simd-accel"] }
log = "0.4.29"
notify = "8.2.0"
oslog = "0.2.0"
regex = "1.12.3"
rusqlite = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.2"
signal-hook = { version = "0.4.3", default-features = false }
thiserror = "2"

[build-dependencies]
vergen = { version = "9", default-features = false }
vergen-git2 = { version = "9", default-features = false, features = ["build"] }

[dev-dependencies]
libc = "0.2"
rstest = { version = "0.26.1", default-features = false, features = ["crate-name"] }
temp-dir-builder = { git = "https://github.com/IohannRabeson/temp-dir-builder", rev = "0eb3527" }

# Usage: cargo run --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true
