[package]
name = "tmignore-rs"
description = "Makes Time Machine respect .gitignore files"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.6", features = ["derive"] }
core-foundation = "0.10.1"
crossbeam-channel = "0.5.15"
fern = "0.7.1"
fnmatch-regex = "0.3.0"
humantime = "2.3.0"
ignore = { version = "0.4", features = ["simd-accel"] }
log = "0.4.29"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
oslog = "0.2.0"
regex = "1.12.3"
rusqlite = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.2"
signal-hook = "0.4.4"
thiserror = "2"
bytesize = "2.3.1"

[build-dependencies]
vergen = { version = "9", default-features = false }
vergen-git2 = { version = "9", default-features = false, features = ["build"] }

[dev-dependencies]
libc = "0.2"
rstest = { version = "0.26.1", default-features = false, features = ["crate-name"] }
serial_test = "3.4.0"
temp-dir-builder = { git = "https://github.com/IohannRabeson/temp-dir-builder", rev = "0eb3527" }

# Usage: cargo run --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.final]
inherits = "release"
incremental = false
codegen-units = 1
opt-level = 3 # Also disable debug_assertions
strip = "symbols"
lto = "fat"